// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loading screen > can change the spinner color 1`] = `
[
  "Loading...",
  <br />,
  <wired-spinner
    style={
      {
        "color": "red",
      }
    }
  />,
  <wired-divider
    style={
      {
        "marginTop": 20,
      }
    }
  />,
  <div
    style={
      {
        "paddingTop": 32,
      }
    }
  >
    <h3>
      Change Properties
    </h3>
    <wired-checkbox />
     Running?
    <br />
    Duration:
    <wired-input
      style={
        {
          "width": 100,
        }
      }
    />
    <br />
    Color:
    <wired-input
      style={
        {
          "width": 100,
        }
      }
    />
  </div>,
]
`;

exports[`Loading screen > can change the spinner color 2`] = `
[
  "Loading...",
  <br />,
  <wired-spinner
    style={
      {
        "color": "green",
      }
    }
  />,
  <wired-divider
    style={
      {
        "marginTop": 20,
      }
    }
  />,
  <div
    style={
      {
        "paddingTop": 32,
      }
    }
  >
    <h3>
      Change Properties
    </h3>
    <wired-checkbox />
     Running?
    <br />
    Duration:
    <wired-input
      style={
        {
          "width": 100,
        }
      }
    />
    <br />
    Color:
    <wired-input
      style={
        {
          "width": 100,
        }
      }
    />
  </div>,
]
`;

exports[`Loading screen > renders "Loading... by default 1`] = `
[
  "Loading...",
  <br />,
  <wired-spinner
    style={
      {
        "color": "red",
      }
    }
  />,
  <wired-divider
    style={
      {
        "marginTop": 20,
      }
    }
  />,
  <div
    style={
      {
        "paddingTop": 32,
      }
    }
  >
    <h3>
      Change Properties
    </h3>
    <wired-checkbox />
     Running?
    <br />
    Duration:
    <wired-input
      style={
        {
          "width": 100,
        }
      }
    />
    <br />
    Color:
    <wired-input
      style={
        {
          "width": 100,
        }
      }
    />
  </div>,
]
`;
